--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <section class="hero is-success is-fullheight">
+    <section class="hero is-success is-fullheight is-bold">
         <div class="hero-body">
           <div class="container">
             <h1 class="title">
